# stochastic_project1

./: .gitignore  Anker_code.IPYNB  assignment1_master_notebook  assignment1_master_notebook.ipynb  group_source_code.ipynb  pyproject.toml  s255697_assigment1_code.ipynb
src/prjt1/: Proj2_Anker.IPYNB  project1_part3-1.ipynb  project2.ipynb  projekt1.ipynb  projekt_part2.ipynb
