[build-system]
requires = ["uv-build>=0.1.0,<=0.11.0"]
build-backend = "uv_build"

[project]
name = "prjt1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

keywords = [""]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "numpy==2.4.2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff==0.1.3"
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.setuptools.packages.find]
include = ["module*"]

[tool.uv.sources]
